--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,14 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
