--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,7 +1,7 @@
 .tools {
   height: 100%;
   width: 480px;
-  background-color: #444444;
+  background-color: var(--tools-background-color);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -18,6 +18,6 @@
 
 @media (prefers-color-scheme: light) {
   .tools {
-    background-color: #e0e0e0;
+    background-color: var(--tools-background-color-light);
   }
 }
