Light scheme adjustments for `CargoDimensionsTool`

--- a/src/components/Tools/CargoDimensionsTool/CargoDimensionsTool.css
+++ b/src/components/Tools/CargoDimensionsTool/CargoDimensionsTool.css
@@ -58,4 +58,8 @@
   .cargo-dimensions-tool {
     border-color: var(--input-border-color-light);
   }
+
+  .cargo-dimensions-tool__cargo {
+    border-color: var(--input-border-color-light);
+  }
 }
