--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,7 +1,7 @@
 .tools {
   height: 100%;
   width: 480px;
-  background-color: #444444;
+  background-color: var(--tools-background-color);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,6 +10,10 @@
 
 .tools__content {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  overflow: auto;
 }
 
 .tools__action {
@@ -18,6 +22,6 @@
 
 @media (prefers-color-scheme: light) {
   .tools {
-    background-color: #e0e0e0;
+    background-color: var(--tools-background-color-light);
   }
 }
