--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,28 @@
 :root {
+  --font-color: rgba(255, 255, 255, 0.87);
+  --font-color-light: #213547;
+  --background-color: #242424;
+  --background-color-light: #ffffff;
+  --button-background-color: #1a1a1a;
+  --button-background-color-light: #f9f9f9;
+  --button-hover-color: #646cff;
+  --input-border-color: rgba(200, 200, 200, 0.87);
+  --input-border-color-light: #213547bb;
+  --tools-background-color: #444444;
+  --tools-background-color-light: #eeeeee;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--font-color);
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 html,
@@ -44,27 +47,43 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--button-background-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--button-hover-color);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  padding: 0.5rem;
+  border: 2px solid var(--input-border-color);
+  border-radius: 8px;
+  outline: none;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease;
+  background-color: var(--tools-background-color);
+}
+input:hover,
+input:focus {
+  border-color: var(--button-hover-color);
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
+    color: var(--font-color-light);
+    background-color: var(--background-color-light);
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--button-background-color-light);
+    border: 1px solid var(--font-color-light);
+  }
+  input {
+    border-color: var(--input-border-color-light);
+    background-color: var(--tools-background-color-light);
   }
 }
