--- a/src/components/Tools/CargoDimensionsTool/CargoDimensionsTool.css
+++ b/src/components/Tools/CargoDimensionsTool/CargoDimensionsTool.css
@@ -21,6 +21,13 @@
   font-weight: 700;
 }
 
+.cargo-dimensions-tool__empty-cargo {
+  margin: 0;
+  text-align: center;
+  font-size: 0.875rem;
+  font-style: italic;
+}
+
 .cargo-dimensions-tool__cargo {
   border-top: 1px solid var(--input-border-color);
   padding-top: 1rem;
