--- a/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
+++ b/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
@@ -18,3 +18,24 @@
   margin-left: 8px;
   width: 100px;
 }
+
+.cargo-dimensions-tool__cargo-count {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.cargo-dimensions-tool__cargo-count-btn {
+  border-radius: 50%;
+  padding: 0.25rem 0.375rem;
+  width: 1.75rem;
+  background-color: var(--tools-background-color);
+  border-color: var(--font-color);
+}
+
+@media (prefers-color-scheme: light) {
+  .cargo-dimensions-tool__cargo-count-btn {
+    background-color: var(--tools-background-color-light);
+    border-color: var(--font-color-light);
+  }
+}
