--- a/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
+++ b/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
@@ -29,8 +29,15 @@
   border-radius: 50%;
   padding: 0.25rem 0.375rem;
   width: 1.75rem;
+  height: 1.75rem;
+  line-height: 0.9375rem;
   background-color: var(--tools-background-color);
   border-color: var(--font-color);
+}
+
+.cargo-dimensions-tool__cargo-count-value {
+  width: 1rem;
+  text-align: center;
 }
 
 @media (prefers-color-scheme: light) {
