--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,11 @@
   --input-border-color-light: #213547bb;
   --tools-background-color: #444444;
   --tools-background-color-light: #eeeeee;
-  --loading-screen-background: rgba(46, 46, 46, 0.5);
+  --loading-screen-background-color: rgba(46, 46, 46, 0.5);
+  --error-toast-background-color: #f8d7da;
+  --error-toast-font-color: #721c24;
+  --error-toast-border-color: #f5c6cb;
+  --soft-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
