--- a/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
+++ b/src/components/Tools/CargoDimensionsTool/CargoControls/CargoControls.css
@@ -74,3 +74,9 @@
     border-color: var(--font-color-light);
   }
 }
+
+@media (max-width: 480px) {
+  .cargo-dimensions-tool__cargo-name-input {
+    font-size: 1rem;
+  }
+}
