--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -25,3 +25,11 @@
     background-color: var(--tools-background-color-light);
   }
 }
+
+@media (max-width: 768px) {
+  .tools {
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+  }
+}
