--- a/src/components/Tools/ToolsInput/ToolsInput.css
+++ b/src/components/Tools/ToolsInput/ToolsInput.css
@@ -20,3 +20,10 @@
   white-space: nowrap;
   border: 0;
 }
+
+@media (max-width: 480px) {
+  .tools-input {
+    width: 48px;
+    font-size: 1rem;
+  }
+}
